Definindo que a classe novaEmpresa só receba POST
Ainda estamos podendo acessar novaEmpresa passando os parâmetros pela
URL, queremos evitar que isso ocorra. Para isso vamos definir que o form
envie um método POST e que a classe novaEmpresa só resolva métodos POST

--- a/src/main/webapp/formNovaEmpresa.html
+++ b/src/main/webapp/formNovaEmpresa.html
@@ -5,8 +5,9 @@
 <title>Cadastro Empresa</title>
 </head>
 <body>
-	<form action="/gerenciador/novaEmpresa">
-  		Nome: <input type="text" name="nome"/>
+	<form action="/gerenciador/novaEmpresa" method="post">
+  		Nome: <input type="text" name="nome"/> <br><br>
+  		CNPJ: <input type="text" name="cnpj"/>
   		<input type="submit"/>
   	</form>
 </body>
